objects/Company_Diversity__c.object
<CustomObject>
    <description>Junction table between company and diversity tables. One company can have multiple diversity types such as MBE, SBE, 8a etc.</description>
    <fields>
        <fullName>BLN_GN_User__c</fullName>
        <label>BLN GN User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipLabel>BLN Company_Diversity</relationshipLabel>
        <relationshipName>BLN_Company_Diversity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLN_TKT_profile__c</fullName>
        <label>BLN TKT profile</label>
        <referenceTo>Tkt_profile__c</referenceTo>
        <relationshipLabel>BLN Company_Diversity</relationshipLabel>
        <relationshipName>BLN_Company_Diversity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>BLN Company_Diversity</relationshipLabel>
        <relationshipName>Company_Diversity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Diversity__c</fullName>
        <label>Diversity</label>
        <referenceTo>Diversity__c</referenceTo>
        <relationshipName>Company_Diversity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>BLN Company_Diversity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Company Diversity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Company_Diversity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>